# velvet-chess

./: .gitignore  Cargo.toml  Makefile  README.md  rustfmt.toml  verify-patch
.cargo/: config.toml
.github/workflows/: release.yml  release_pgo.yml  test.yml
artifacts/: release_notes.md
cputrainer/: Cargo.toml
cputrainer/src/: main.rs  net.rs  sets.rs
engine/: Cargo.toml
engine/nets/: velvet.qnn  velvet_layer_in_bias.qnn  velvet_layer_out_weights.qnn  velvet_psq.qnn
engine/src/: align.rs  bitboard.rs  board.rs  colors.rs  compression.rs  egbb.rs  engine.rs  eval.rs  fen.rs  gen_quiet_pos.rs  history_heuristics.rs  init.rs  lib.rs  magics.rs  main.rs  move_gen.rs  moves.rs  nn.rs  nn_eval.rs  options.rs  params.rs  perft.rs  pieces.rs  pos_history.rs  random.rs  score_util.rs  scores.rs  search.rs  search_context.rs  slices.rs  syzygy.rs  tb.rs  time_management.rs  transposition_table.rs  tuning.rs  uci.rs  uci_move.rs  zobrist.rs
engine/src/board/: castling.rs  cycledetection.rs
engine/src/engine/: bench.rs
engine/src/nn/: eval.rs  io.rs
engine/src/params/: macros.rs
engine/tests/: perft_tests.rs
fathomrs/: Cargo.toml  build.rs
fathomrs/fathom/src/: tbconfig.h  tbprobe.c
fathomrs/src/: bindings.rs  lib.rs  tb.rs
genegbb/: Cargo.toml
genegbb/src/: main.rs
genmagics/: Cargo.toml
genmagics/src/: main.rs
gensets/: Cargo.toml
gensets/src/: chess960.rs  gen_quiet_pos.rs  main.rs  rescore.rs  writer.rs
gputrainer/: Cargo.toml
gputrainer/src/: layer.rs  main.rs  sets.rs
pgo/: merged_avx512_linux.profdata
pytools/patch-verifier/: client.py  common.py  server.py
pytools/tuning/: Pipfile  common.py  config.yml  evalset.py  gen_program_snippet.rs  gencode.py  tune.py  zobrist.py
pytools/tuning/codegen_snippets/: header.rs  pst_prod.rs
selfplay/: Cargo.toml
selfplay/src/: lib.rs  openings.rs  pentanomial.rs  selfplay.rs
sprt/: Cargo.toml
sprt/src/: engine.rs  main.rs  pentanomial.rs  sprt.rs
src/: bitboard.rs  board.rs  boardpos.rs  castling.rs  colors.rs  engine.rs  eval.rs  eval_options.rs  eval_search.rs  fen.rs  genetic_common.rs  genetic_eval.rs  genetic_eval_trainer.rs  history_heuristics.rs  lib.rs  magics.rs  magics_search.rs  main.rs  move_gen.rs  move_sort.rs  moves.rs  options.rs  perft.rs  piece_sq_tables.rs  pieces.rs  pos_history.rs  random.rs  score_util.rs  search.rs  time_management.rs  trainer.rs  transposition_table.rs  tuning.rs  uci.rs  uci_move.rs  zobrist.rs
tests/: perft_tests.rs
tools/tuning/: .gitignore  common.py  config.yml  config_example.yml  engine.py  evalset.py  filterset.py  gencode.py  genetic.py  genset.py  gensnippet.py  options_tuning.rs  postune.py  tune.py
tools/tuning/codegen_snippets/: header.rs  options_parse.rs  pst_prod.rs  pst_tuning.rs
tournament/: Cargo.toml
tournament/src/: affinity.rs  config.rs  main.rs  pgn.rs  san.rs  tournament.rs  uci_engine.rs
traincommon/: Cargo.toml
traincommon/src/: idsource.rs  lib.rs  sets.rs
trainer/: Cargo.toml
trainer/src/: lr_finder.rs  lr_scheduler.rs  main.rs  net.rs  sets.rs
tuner/: Cargo.toml
tuner/src/: main.rs
