[package]
name = "velvet"
license = "GPL-3.0-or-later"
version = "1.2.0"
authors = ["mhonert"]
description = "Velvet is a UCI chess engine"
readme = "README.md"
publish = false
categories = ["chess", "uci"]
repository = "https://github.com/mhonert/velvet-chess"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
lgp_training = ["wasmer", "uint"]

[profile.release]
#lto = "fat"

[dependencies]
uint = { version = "0.9.0", optional = true }
wasmer = { version = "1.0.2", optional = true }