[package]
name = "velvet"
license = "GPL-3.0-or-later"
version = "1.2.0"
authors = ["mhonert"]
description = "Velvet is a UCI chess engine"
readme = "README.md"
publish = false
categories = ["chess", "uci"]
repository = "https://github.com/mhonert/velvet-chess"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
lgp_training = ["wasmer", "wasmer-compiler-llvm", "uint", "itertools", "crossbeam-queue", "crossbeam-utils", "crossbeam-channel", "bincode", "serde", "clap"]

[profile.release]
#lto = "fat"

[dependencies]
uint = { version = "0.9.0", optional = true }
wasmer = { version = "1.0.2", optional = true }
itertools = { version = "0.10.0", optional = true }
crossbeam-queue = { version = "0.3.1", optional = true }
crossbeam-utils = { version = "0.8.4", optional = true }
crossbeam-channel = { version = "0.5.1", optional = true }
bincode = { version = "1.3.3", optional = true }
serde = { version = "1.0.126", optional = true }
clap = { version = "2.33.3", optional = true }
wasmer-compiler-llvm = { version = "1.0.2", optional = true }
