[package]
name = "cputrainer"
version = "3.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
velvet = { path = "../engine", default-features = false }
traincommon = { path = "../traincommon" }


crossbeam-channel = "0.5"
env_logger = "0.10.0"
itertools = "0.11.0"
log = "0.4.17"
rand = "0.8.5"
rayon = "1.6"