[package]
name = "velvet"
license = "GPL-3.0-or-later"
version = "9.0.0-dev3"
authors = ["mhonert"]
description = "Velvet is a UCI chess engine"
readme = "../README.md"
publish = false
repository = "https://github.com/mhonert/velvet-chess"
edition = "2021"
default-run = "velvet"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "velvet"
path = "src/main.rs"

[dependencies]
fathomrs = { path = "../fathomrs", optional = true }

[features]
default = ["fathomrs"]
fathomrs = ["dep:fathomrs"]
tune = []
avx512 = []
