[package]
name = "gensets"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
velvet = { path = "../engine"}

clap = "2.33.3"
itertools = "0.10.0"
rand = "0.8.4"
shakmaty = "0.20.3"
shakmaty-syzygy = "0.18.0"