[package]
name = "gensets"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
velvet = { path = "../engine", default-features = false }
fathomrs = { path = "../fathomrs" }

anyhow = "1.0.71"
clap = { version = "4.3.11", features = ["derive"] }
ctrlc = "3.4.0"
glob = "0.3.1"
itertools = "0.11.0"
pgn-reader = "0.24.0"
rand = "0.8.4"
shakmaty = "0.25.0"
uuid = { version = "1.4.0", features = ["v4", "fast-rng"] }