[package]
name = "gensets"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
velvet = { path = "../engine", default-features = false }
fathomrs = { path = "../fathomrs" }

anyhow = "1.0.76"
clap = { version = "4.3.11", features = ["derive"] }
ctrlc = "3.4.1"
glob = "0.3.1"