[package]
name = "gputrainer"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
velvet = { path = "../engine"}
traincommon = { path = "../traincommon" }

byteorder = "1.4.3"
env_logger = "0.9.0"
itertools = "0.10.0"
log = "0.4.17"
rand = "0.8.5"
tch = "0.10.1"