[package]
name = "traincommon"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
velvet = { path = "../engine", default-features = false }


byteorder = "1.4.3"
itertools = "0.10.0"
lz4_flex = { version = "0.9.5", default-features = false, features = ["frame"] }
rand = "0.8.5"