[package]
name = "traincommon"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
velvet = { path = "../engine", default-features = false }
fathomrs = { path = "../fathomrs" }

lz4_flex = { version = "0.11.1", default-features = false, features = ["frame"] }
rand = "0.8.5"
