[package]
name = "trainer"
version = "1.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
lr_finder = ["plotters"]

[dependencies]
velvet = { path = "../engine"}

byteorder = "1.4.3"
itertools = "0.10.0"
lz4_flex = "0.8.2"
plotters = { version = "0.3.1", optional = true }
rand = "0.8.4"
tch = "0.5.0"