[package]
name = "trainer"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
velvet = { path = "../engine"}

byteorder = "1.4.3"
crossbeam-channel = "0.5"
env_logger = "0.9.0"
itertools = "0.10.0"
log = "0.4.17"
lz4_flex = "0.8.2"
rand = "0.8.5"
rayon = "1.6"