[package]
name = "tuner"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
velvet = { path = "../engine", default-features = false, features = ["tune"] }
selfplay = { path = "../selfplay" }

rand = "0.8.5"
core_affinity = "0.8.1"
thread-priority = "1.1.0"
